--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "marhaba-delivery-service",
   "version": "1.0.0",
   "description": "Delivery application for Marhaba Restaurant with JWT authentication",
-  "main": "server.js",
+  "main": "./src/server.js",
   "directories": {
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
