--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/youssefhammani/marhaba-delivery-service#readme",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
@@ -38,6 +39,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
-    "nodemailer": "^6.9.6"
+    "nodemailer": "^6.9.6",
+    "supertest": "^6.3.3"
   }
 }
